@@ -5,12 +5,11 @@ simp_docker::manage_sysctl: true
 simp_docker::bridge_dev: docker0
 simp_docker::options: {}
 
-
 simp_docker::default_options:
   redhat:
     use_upstream_package_source: false
     service_overrides_template: false
-    selinux_enabled: "true" # has to be a string???
+    selinux_enabled: "%{facts.selinux}"
     manage_epel: false
     docker_ce_package_name: docker
     log_driver: journald
@@ -19,9 +18,7 @@ simp_docker::default_options:
     docker_ce_package_name: docker-ce
     log_driver: journald
     manage_epel: false
-    # selinux_enabled: "%{facts.selinux_enabled}"
   ee:
     docker_ee: true
     log_driver: journald
     manage_epel: false
-    # selinux_enabled: "%{facts.selinux_enabled}"
